Fixed scrollbar

--- a/themes/alexa-portfolio/assets/sass/_generic.scss
+++ b/themes/alexa-portfolio/assets/sass/_generic.scss
@@ -33,7 +33,7 @@ body {
   box-sizing: border-box;
   font: 1.6rem/2.4rem var(--font-stack, sans-serif);
   font-feature-settings: 'ss03', 'salt';
-  height: 100%;
+  // height: 100%;
   letter-spacing: -0.016em;
 
   *,
